# ManagementTeam

./: .cursorrules  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  BUILD_SUMMARY.txt  COMPLETE_SYSTEM_ARCHITECTURE.md  COMPLETE_SYSTEM_FLOW.md  CONVERSATIONAL_WORKFLOW_GUIDE.md  CURRENT_SYSTEM_STATUS.md  DEPLOYMENT.md  DOCUMENTATION_STATUS.md  FINAL_STATUS_PHASE_16.md  FINAL_SYSTEM_STATUS.md  IMPLEMENTATION_COMPLETE.md  MODULAR_ORCHESTRATOR_COMPLETE.md  PERSONAL_USE_ROADMAP.md  PHASES_12_13_COMPLETE.md  PROJECT_INDEX.md  PROJECT_SNAPSHOT.md  QUICKSTART.md  QUICK_START.md  README.md  SESSION_SUMMARY.md  STRATEGIC_PLANNER_IMPLEMENTATION.md  SYSTEM_100_PERCENT_COMPLETE.md  SYSTEM_INTEGRATION_GUIDE.md  TEMPLATE_INTEGRATION_COMPLETE.md  WORKSHOP_AGENT_COMPLETE_CONTEXT.md  WORKSHOP_COMPLETE.md  WORKSHOP_DATA_STORAGE_EXPLAINED.md  YOUR_PERSONAL_ASSISTANT_ANALYSIS.md  cursor_plan_full_implementation.md  demand_validation_report.json  evidence_report.md  market_validation_engine.md  mkdocs.yml  orchestrator_core_v3.py  phase_0.json  (+18 more)
.cache/: TestAgent_021be1deb6f6a8313aff3b37a321ac595d1f0ffa2131e983ade0517461ed36d7.yaml
.claude/: project_progress_plan.md  rules.md
.streamlit/: config.toml
claude/: claude.md  config.yaml  cursor_rules.md  environment.sh
cli/: interactive_workflow.py  manage.py
config/: .env.example  api_config.example.json  conflict_policy.yaml  env_manager.py  features.yml  field_requirements.yml  global.yaml  logging.yaml  mem0.yaml  neo4j.yaml  perf_policy.yaml  planning_agent_context.yaml  quality_gates.yml  subagents.yml  transparency_config.json  trend_research_config.yaml
core/: agent_protocol.py  ai_conversation_handler.py  base_agent.py  cache.py  checkpoint_manager.py  competitive_analyzer.py  critic_agent.py  explorer_agent.py  historian_agent.py  idea_critic.py  interactive_orchestrator.py  keyword_generator.py  pain_discovery_analyzer.py  project_context.py  project_context_db.py  project_memory.py  research_documenter.py  subagent_coordinator.py  subagent_triggers.py  workflow_gates.py  workflow_state.py
dashboard/: QUICKSTART.md  README.md  agent_runner.py  api_server.py  config.py  file_manager.py  requirements.txt  start_dashboard.sh  stop_dashboard.sh  streamlit_dashboard.py
dashboards/: README.md  VERTICAL_DASHBOARD_README.md  planner_dashboard.py  vertical_dashboard.py
docs/: ARCHITECTURE.md  AUDIT_CHECKLIST.md  CHANGELOG.md  CLAUDE.md  COMPLETE_SYSTEM_OVERVIEW.md  COST_OPTIMIZATION.md  FOLDER_STRUCTURE.md  PROJECT_SNAPSHOT.md  QUICK_REFERENCE.md  RULES_DATABASE.md  SUB_AGENT_CLAUDE_INTEGRATION.md  SUB_AGENT_SYSTEM_SUMMARY.md  TESTING_NOTES.md  index.md
inputs/: asksharon_ai.json  example_simple.json  ideas.json  my_productivity_assistant.json  verticals.json  verticals.yaml
integrations/: perplexity_connector.py
memory/: mem0_adapter.py  supabase_memory.py
orchestrator_prototype/: orchestrator_core.py
outputs/: PHASE_1.5_SUMMARY.md  PHASE_11_SUMMARY.md  PHASE_13_SUMMARY.md  PHASE_14_15_SUMMARY.md  PHASE_16_SUMMARY.md  PHASE_1_COMPLETE.md  PHASE_2_SUMMARY.md  PHASE_3_SUMMARY.md  PHASE_4_SUMMARY.md  PHASE_5_SUMMARY.md  PHASE_6_SUMMARY.md  PHASE_7_SUMMARY.md  PHASE_8_SUMMARY.md  PHASE_9_SUMMARY.md  VERTICAL_AGENT_COMPLETE.md  dependency_map.yaml  final_summary.md  planning_summary.md  prd.md  project_plan.yaml  recommendation.md  roadmap.md  session_summary_20251011_181128.md  session_summary_20251011_182036.md  session_summary_20251011_182253.md  session_summary_20251011_182537.md  session_summary_20251011_183120.md  session_summary_20251011_183537.md  session_summary_20251011_183941.md  session_summary_20251011_184629.md  session_summary_20251011_185012.md  session_summary_20251011_191134.md  session_summary_20251011_191348.md  session_summary_20251011_192612.md  session_summary_20251011_192929.md  session_summary_20251011_193214.md  session_summary_20251011_194220.md  session_summary_20251011_194317.md  session_summary_20251017_154113.md  session_summary_20251017_160333.md  (+4 more)
results/: opportunity_report.md  ranked_opportunities.json
scripts/: create_new_project.sh  export_evidence.py  init_management_team.py  maintenance_tasks.py  migrate_project_to_standards.sh  migrate_to_supabase.py  orchestrator.py  orchestrator_v2.py  run_idea_to_project.py  run_opportunity_ranking.py  run_planner.py  run_refine_and_score.py  run_refiner.py  run_strategic_planner.py  run_vertical.py  run_vertical_agent.py  save_workshop_sources.py  search_evidence.py  show_workshop_reasoning.py  start_redis.sh  test_complete_flow.py  test_pain_point_system.py  test_subagent_system.py  test_summary_parser.py  test_vertical_edge_cases.py  update_changelog.py  validate_environment.py  verify_docs.py  view_idea_database.py  view_last_workshop_results.py  view_posts.py
setup/: activate.sh  setup_environment.sh  setup_project_complete.sh
src/: __init__.py
streamlit_app/: app.py
tests/: test_async_orchestration.py  test_collector.py  test_enhanced_discovery.py  test_integration.py  (+4 more)
(+340 files in other folders)
